[package]
name = "cargo-arps"
version = "0.3.2"
edition = "2021"
description = "a arp tool on windows"
license-file = "LICENSE"
repository = "https://github.com/jm-observer/cargo-arps.git"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = ["/Packet.lib", "src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.66"
custom-utils = "0.10.12"
log = "0.4.17"
pnet =  {version = "0.34.0", features = ["std"]}
serde = { version = "1.0", features = ["derive"]}
clap = { version = "4.0.29", features = ["derive"]}
surge-ping = "0.8.0"
tokio = {version = "1.23.0", features = ["net", "macros", "rt-multi-thread", "rt"]}
rand = "0.8.5"

#[[bin]]
#name = "cargo-arps"
#path = "src/main.rs"